--- a/partials/my-characters.html
+++ b/partials/my-characters.html
@@ -1,6 +1,6 @@
 <div id="myCharacterPageContainer">
     <div class="cards-title" onload="showMyCharacters()">
-    <h1>YOUR CHARACTERS</h1><label>Find Character: <input ng-model="searchText"></label>
+    <h1>YOUR CHARACTERS</h1><label id="findChar">Find Character: <input ng-model="searchText"></label>
     </div>
 
     <div class="row myCharacterContainer">
