--- a/partials/my-regions.html
+++ b/partials/my-regions.html
@@ -1,5 +1,5 @@
 <div class="myRegionContainer">
-<h1>YOUR REGIONS</h1><label>Find Region: <input ng-model="searchText"></label>
+<h1>YOUR REGIONS</h1><label id="findReg">Find Region: <input ng-model="searchText"></label>
 <div class="jumbotron" ng-repeat="regions in regionData | orderBy: 'name'| filter:searchText">
   <h1>{{regions.name}}</h1> <!-- Name of your region -->
   <p>{{regions.info}}</p> <!-- Region Info -->
