--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -249,8 +249,7 @@ background:rgba(173,216,230,0.5);
 }
 
 #notesArea{
-  float: right;
-  padding-right: 10%;
+  margin-left: 5vh;
 }
 #singleCharacterPage{
   width: 90%;
