--- a/partials/single-character.html
+++ b/partials/single-character.html
@@ -80,6 +80,6 @@
 		</div>
 	</div>
 	<div>
-		<textarea rows="20" cols="20"></textarea>
+		<textarea id="notesArea" rows="20" cols="20"></textarea>
 	</div>
 </div>
