--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -1,6 +1,8 @@
 <div id="homePageContainer">
 	<div id="introduction">
-		<p class="loginP">Hello! 
+		<p class="loginP">
+
+		Hello!<br><br>
 
 		Welcome to this simple DnD character builder. <br><br>
 
@@ -8,11 +10,11 @@
 
 		After you have logged in, you may begin creating regions by clicking the CREATE REGION tab.<br><br>
 
-		The regions are here for you to establish locations within your campaign, and what information you, as the campaign organizer, must remember. <br><br>
+		The regions are here for you to establish locations within your campaign/world, and what information you, as the campaign organizer, must remember. <br><br>
 
 		After you have built your regions, you can start populating them with characters.<br><br> 
 
-		To create characters, simply click on the CREATE CHARACTER tab and fill out the form. At the bottom of the form, you will see your previously created regions. Here you can assign characters to occupy a specific region. <br><br>
+		To create characters, simply click on the CREATE CHARACTER tab and fill out the form. At the bottom of the form on the right, you will see your previously created regions. Here you can assign characters to occupy a specific region. <br><br>
 
 		Now that you have created both regions and characters, you can click on the MY CHARACTERS tab and see all of your characters with the information you provided. <br><br>
 
