--- a/partials/edit-character.html
+++ b/partials/edit-character.html
@@ -90,9 +90,10 @@
 		<h1>ADD INFO</h1>
 		<!-- CLASS -->
 			<h3>Classes</h3>
-			CLICK TO OPEN:
+			CLICK TO OPEN:<div class="squaredOne">
 				<input type=checkbox ng-model=classescollapse value="None" id="slideFive" name="check">
 				<label for="slideFive"></label>
+				</div>
 		<div id="classes" class="createBox" ng-model="class">
 			<ul id="classList" ng-show=classescollapse ng-repeat="item in classes | orderBy: 'name'">
 				<li ng-click="addClass(item)">{{item.name}}</li>
@@ -101,9 +102,10 @@
 		<!-- SKILLS -->
 			<h3>Skills</h3>
 			<label>Search Skills: <input ng-model="searchSkills"></label><br>
-		CLICK TO OPEN:
+		CLICK TO OPEN:<div class="squaredOne">
 				<input type=checkbox ng-model=skillscollapse value="None" id="slideOne" name="check">
 				<label for="slideOne"></label>
+				</div>
 		<div id="skills" class="createBox" ng-model="skills">
 			<ul id="skillList" ng-show=skillscollapse ng-repeat="item in finalSkills | orderBy: 'name' | filter:searchSkills">
 				<li ng-click="addSkill(item)">{{item.data.name}}</li>
@@ -115,9 +117,10 @@
 		<!-- FEATS -->
 			<h3>Feats</h3>
 			<label>Search Feats: <input ng-model="searchFeats"></label><br>
-			CLICK TO OPEN:
+			CLICK TO OPEN:<div class="squaredOne">
 				<input type=checkbox ng-model=featscollapse value="None" id="slideTwo" name="check">
 				<label for="slideTwo"></label>
+				</div>
 		<div id="features" ng-show=featscollapse class="createBox" ng-model="features">
 			<ul id="featuresList" ng-repeat="item in finalFeats | orderBy: 'name'| filter:searchFeats">
 				<li ng-click="addFeat(item)">{{item.data.name}}</li>
@@ -131,9 +134,10 @@
 			<!-- EQUIPMENT -->
 			<h3>Equipment</h3>
 			<label>Search Equipment: <input ng-model="searchEquip"></label><br>
-			CLICK TO OPEN:
+			CLICK TO OPEN:<div class="squaredOne">
 				<input type=checkbox ng-model=equipmentcollapse value="None" id="slideThree" name="check">
 				<label for="slideThree"></label>
+				</div>
 		<div id="equipment" ng-show=equipmentcollapse class="createBox" ng-model="equipment">
 			<ul id="equipmentList" ng-repeat="item in finalEquipment | orderBy:[ 'name',  'equipment_category']| filter:searchEquip">
 				<li ng-click="addEquipment(item)">{{item.data.name}}</li>
@@ -152,9 +156,10 @@
 		</div>
 		<!-- MAGIC SCHOOLS -->
 			<h3>Magic-Schools</h3>
-			CLICK TO OPEN:
+			CLICK TO OPEN:<div class="squaredOne">
 				<input type=checkbox ng-model=magicschoolscollapse value="None" id="slideSix" name="check">
 				<label for="slideSix"></label>
+				</div>
 		<div id="magicSchools" ng-show="magicschoolscollapse" class="createBox" ng-model="magicSchools">
 			<ul id="magicSchoolsList" ng-repeat="item in magicSchools | orderBy: 'name'">
 				<li ng-click="addMagicSchools(item)">{{item.name}}</li>
@@ -163,9 +168,10 @@
 		<!-- SPELLS -->
 			<h3>Spells</h3>
 			<label>Search Spells: <input ng-model="searchSpells"></label><br>
-			CLICK TO OPEN:
+			CLICK TO OPEN:<div class="squaredOne">
 				<input type=checkbox ng-model=spellscollapse value="None" id="slideFour" name="check">
 				<label for="slideFour"></label>
+				</div>
 		<div id="spells" ng-show=spellscollapse class="createBox" ng-model="spells">
 			<ul id="spellList"  ng-repeat="item in finalSpells | orderBy: 'name'| filter:searchSpells">
 				<li ng-click="addSpell(item)">{{item.data.name}}</li>
