--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -22,7 +22,7 @@
 
 		If you select a character's name in the MY CHATACTERS or the MY REGIONS tab, you will be taken to a page of just that character with a note pad. This page is for encounters. No changes will be saved.<br><br>
 
-		To log out, simply come back to this page and click the LOG OUT button. 
+		To log out, simply come back to this page and click the LOG OUT button. <br><br> 
 
 		Thank you, and enjoy!<br><br> 
 		</p>
