fixed minor changes

--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -8,23 +8,24 @@
 
 		To begin, please sign in with Google. <br><br>
 
-		After you have logged in, you may begin creating regions by clicking the CREATE REGION tab.<br><br>
+		After you have logged in, you may begin creating regions by clicking the CREATE REGION tab.<br><br> 
 
 		The regions are here for you to establish locations within your campaign/world, and what information you, as the campaign organizer, must remember. <br><br>
 
 		After you have built your regions, you can start populating them with characters.<br><br> 
 
-		To create characters, simply click on the CREATE CHARACTER tab and fill out the form. At the bottom of the form on the right, you will see your previously created regions. Here you can assign characters to occupy a specific region. <br><br>
+		To create characters, simply click on the CREATE CHARACTER tab and fill out the form. At the bottom of the form on the right, you will see your previously created regions. Here you can assign characters to occupy a specific region.  <br><br>
 
 		Now that you have created both regions and characters, you can click on the MY CHARACTERS tab and see all of your characters with the information you provided. <br><br>
 
 		In addition you can click on the MY REGIONS tab and see all of your created regions as well as all of the characters that belong to that region. <br><br>
 
-		If you select a character's name in the MY CHATACTERS or the MY REGIONS tab, you will be taken to a page of just that character with a note pad. This page is for encounters. No changes will be saved.<br><br>
+		If you select a character's name in the MY CHARACTERS or the MY REGIONS tab, you will be taken to a page of just that character with a note pad. This page is for encounters. No changes will be saved.<br><br>
 
 		To log out, simply come back to this page and click the LOG OUT button. <br><br> 
 
-		Thank you, and enjoy!<br><br> 
+		Thank you, and enjoy!<br><br>
+
 		</p>
 	</div>
 
