--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,8 @@ button {
 .loginP {
   padding: 2vh;
   margin: 0 2vh 0 2vh;
-  font-size: 1.3em; }
+  font-size: 1.3em;
+  color: navy; }
 
 /********NAV BAR********/
 #profile-image-anchor {
