--- a/partials/login-register.html
+++ b/partials/login-register.html
@@ -6,7 +6,7 @@
 
 		Welcome to this simple DnD character builder. <br><br>
 
-		To begin, please sign in with Google. <br><br>
+		To begin, please sign in with Google. The pages will not load if you fail to do this. <br><br>
 
 		After you have logged in, you may begin creating regions by clicking the CREATE REGION tab.<br><br> 
 
